--- a/src/index.css
+++ b/src/index.css
@@ -47,8 +47,13 @@ body {
 
 .dice {
   position: absolute;
-  top: 288px;
-  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 278px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
   background-color: var(--neon-green);
 }
 
